-Add: versions - now returning all matching versions to profile (without persisting them) -Fix: empty tag-array will be returned if nothing can be fetched
