# swagger/swagger.yaml
@@ -176,9 +176,9 @@ paths:
     get:
       tags:
       - profile
-      summary: Returns docker versions matching to profile
+      summary: Returns versions matching to profile
       description: Returns versions matching to profile, persists status to prevent duplicate news
-      operationId: findVersionsByProfile
+      operationId: getNewsByProfile
       parameters:
       - name: profileId
         in: path
@@ -232,6 +232,36 @@ paths:
         explode: true
         schema:
           type: boolean
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/VersionManifest'
+        400:
+          description: Invalid status value
+          content: {}
+      security:
+      - auth:
+        - write:userprofile
+        - read:userprofile
+  /api/profiles/{profileId}/versions:
+    get:
+      tags:
+      - profile
+      summary: Returns versions matching to profile
+      description: Returns versions matching to profile
+      operationId: findVersionsByProfile
+      parameters:
+      - name: profileId
+        in: path
+        description: Profile
+        required: true
+        schema:
+          type: string      
       responses:
         200:
           description: successful operation
